Resurrect and fix layout test http/tests/adClickAttribution/store-ad-click-attribution.html https://bugs.webkit.org/show_bug.cgi?id=196476

Patch by Alex Christensen <achristensen@webkit.org> on 2019-04-03
Reviewed by Chris Dumez.

Source/WebKit:

Re-apply a change I reverted in r241754 now that it's safe to do so.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didCommitLoadForFrame):

LayoutTests:

* http/tests/adClickAttribution/store-ad-click-attribution-expected.txt:

Canonical link: https://commits.webkit.org/210805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243809 268f45cc-cd09-0410-ab3c-d52691b4dbfc